[workspace]
members = [
    "cli",
    "cron",
    "plugin",
    "programs/*",
    "relayer",
    "sdk",
    "utils"
]

[profile.release]
overflow-checks = true

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "master", features = ["mint", "token"] }
