[package]
name = "clockwork-app"
version = "2.0.2"
edition = "2021"
description = "The Clockwork Dashboard"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/app"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[dependencies]
anchor-lang = "0.27.0"
bincode = "1.3.3"
bytemuck = "1.13.0"
chrono = "0.4.23"
clockwork-thread-program-v1 = { package = "clockwork-thread-program-v1", path = "../programs/thread/v1", version = "2.0.2", features = ["no-entrypoint"] }
clockwork-thread-program-v2 = { package = "clockwork-thread-program", path = "../programs/thread", version = "2.0.2", features = ["no-entrypoint"] }
clockwork-network-program = { package = "clockwork-network-program", path = "../programs/network", version = "2.0.2", features = ["no-entrypoint"] }
clockwork-relayer-api = { path = "../relayer/api", version = "2.0.2" }
clockwork-cron = { path = "../cron", version = "2.0.2" }
clockwork-utils = { path = "../utils", version = "2.0.2" }
dioxus = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
dioxus-web = "0.3.0"
gloo-events = "0.1.2"
gloo-storage = "0.2.2"
gloo-timers = "0.2.6"
gloo-utils = "0.1.6"
js-sys = "0.3.61"
log = "0.4"
pyth-sdk-solana = "0.7.1"
reqwest = "0.11.14"
serde = "1.0.152"
solana-client-wasm = { git = "https://github.com/clockwork-xyz/solana-playground", rev = "83e485fbb8f8f09a6411d65ffe63823080847cda" }
solana-extra-wasm = { git = "https://github.com/clockwork-xyz/solana-playground", rev = "83e485fbb8f8f09a6411d65ffe63823080847cda" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2"
web-sys = { version = "0.3.61", features = ["Element"] }
