[package]
name = "clockwork-app"
version = "2.0.15"
edition = "2021"
description = "The Clockwork Dashboard"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/app"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
publish = false

[dependencies]
anchor-lang = "0.27.0"
bincode = "1.3.3"
bytemuck = "1.13.0"
chrono = "0.4.23"
clockwork-thread-program-v1 = { package = "clockwork-thread-program-v1", path = "../programs/thread/v1", version = "1.4.5", features = ["no-entrypoint"] }
clockwork-thread-program-v2 = { package = "clockwork-thread-program", path = "../programs/thread", version = "2.0.15", features = ["no-entrypoint"] }
clockwork-network-program = { package = "clockwork-network-program", path = "../programs/network", version = "2.0.15", features = ["no-entrypoint"] }
clockwork-relayer-api = { path = "../relayer/api", version = "2.0.15" }
clockwork-cron = { path = "../cron", version = "2.0.15" }
clockwork-utils = { path = "../utils", version = "2.0.15" }
dioxus = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
dioxus-web = "0.3.0"
gloo-events = "0.1.2"
gloo-storage = "0.2.2"
gloo-timers = "0.2.6"
gloo-utils = "0.1.4"
js-sys = "0.3.61"
log = "0.4"
pyth-sdk-solana = "0.7.1"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
solana-client-wasm = { git = "https://github.com/clockwork-xyz/solana-playground", rev = "83e485fbb8f8f09a6411d65ffe63823080847cda" }
solana-extra-wasm = { git = "https://github.com/clockwork-xyz/solana-playground", rev = "83e485fbb8f8f09a6411d65ffe63823080847cda" }
uuid = { version = "1.3.0", features = ["v4"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2"
web-sys = { version = "0.3.61", features = ["Element"] }

[patch.crates-io]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", branch = "master", features = ["web"] }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", branch = "master" }
