[package]
name = "cronos-bot"
version = "0.1.6"
edition = "2021"
description = "Worker bot to execute Cronos tasks"
license = "Apache-2.0"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/bot"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana", "cronos", "program"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.22.0"
cronos-sdk = { path = "../sdk", version = "0.1.6" }
dotenv = "0.15.0"
postgres = "0.19.2"
solana-account-decoder = "1.9.9"
solana-client = "1.9.9"
solana-client-helpers = "1.1.0"
solana-sdk = "1.9.9"
to_bytes = "0.1.0"
ttl_cache = "0.5.1"
