[package]
name = "clockwork-cli"
repository = "https://github.com/clockwork-xyz/cli"
description = "Command line interface for Clockwork"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }


[dependencies]
anchor-lang = { workspace = true }
anyhow = "1.0.61"
bincode = "1.3.3"
clap = { version = "3.1.2", features = ["derive"] }
clockwork-client = { workspace = true }
clockwork-cron = { workspace = true }
clockwork-relayer-api = { workspace = true }
clockwork-utils = { workspace = true }
clockwork-webhook-program = { workspace = true }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
dirs-next = "2.0.0"
regex = "1.6.0"
reqwest = "0.11.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.4"
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-memo = { workspace = true }
spl-token = { workspace = true }
thiserror = "1.0.30"
version = "3.0.0"

[[bin]]
name = "clockwork"
path = "src/main.rs"

[build-dependencies]
cargo_toml = "0.15"
regex = "1.6.0"
