[package]
name = "clockwork-cli"
version = "2.0.19"
description = "Command line interface for Clockwork"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/cli"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { features = ["mint", "token"], version = "0.29.0" }
anyhow = "1.0.61"
bincode = "1.3.3"
bzip2 = "0.4"
clap = { version = "3.1.2", features = ["derive"] }
clockwork-cron = { path = "../cron", version = "=2.0.19" }
clockwork-network-program = { path = "../programs/network", version = "=2.0.19", features = ["no-entrypoint"] }
clockwork-relayer-api = { path = "../relayer/api", version = "=2.0.19" }
clockwork-plugin-utils= { path = "../plugin/utils", version = "=2.0.19" }
clockwork-thread-program = { path = "../programs/thread", version = "=2.0.19", features = ["no-entrypoint"] }
clockwork-utils = { path = "../utils", version = "=2.0.19" }
clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.19", features = ["no-entrypoint"] }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
dirs-next = "2.0.0"
indicatif = "0.16"
reqwest = "0.11.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.4"
solana-account-decoder = "^1.16"
solana-client = "^1.16"
solana-clap-utils = "^1.16"
solana-cli-config = "^1.16"
solana-sdk = "^1.16"
spl-associated-token-account = "^2.3"
spl-memo = "3.0.1"
spl-token = "~3.5.0"
tar = "0.4"
thiserror = "1.0.30"
termcolor = "1.2.0"

[[bin]]
name = "clockwork"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "=0.14.0"
