[package]
name = "clockwork-client"
version = "2.0.0-alpha"
edition = "2021"
description = "Clockwork client"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/client"
documentation = "https://docs.rs/clockwork-client"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_client"

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { features = ["mint", "token"], version = "0.26.0" }
bincode = "1.3.3"
borsh = "0.9.3"
clockwork-network-program = { path = "../programs/network", features = ["no-entrypoint"], version = "2.0.0-alpha" }
clockwork-thread-program = { path = "../programs/thread", features = ["no-entrypoint"], version = "2.0.0-alpha" }
clockwork-utils = { path = "../utils", version = "2.0.0-alpha" }
clockwork-webhook-program = { path = "../programs/webhook", features = ["no-entrypoint"], version = "2.0.0-alpha" }
solana-client = "~1.14.12"
solana-sdk = "~1.14.12"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"
