[package]
name = "clockwork-client"
repository = "https://github.com/clockwork-xyz/client"
description = "Clockwork client"
documentation = "https://docs.rs/clockwork-client"
readme = "./README.md"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_client"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["mint", "token"] }
bincode = "1.3.3"
borsh = "0.9.3"
clockwork-network-program = { workspace = true }
clockwork-thread-program = { workspace = true, features = ["no-entrypoint"] }
clockwork-utils = { workspace = true }
clockwork-webhook-program = { workspace = true, features = ["no-entrypoint"]}
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
thiserror = "1.0.31"
