[package]
name = "mat-clockwork-client"
version = "2.0.42"
edition = "2021"
description = "Clockwork client"
license = "AGPL-3.0-or-later"
homepage = "https://mat-clockwork.xyz"
repository = "https://github.com/mat-clockwork-xyz/client"
documentation = "https://docs.rs/mat-clockwork-client"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_client"

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = { features = ["mint", "token"], version = "0.27.0" }
bincode = "1.3.3"
borsh = "0.9.3"
mat-clockwork-network-program = { path = "../programs/network", features = ["no-entrypoint"], version = "2.0.42" }
mat-clockwork-thread-program = { path = "../programs/thread", features = ["no-entrypoint"], version = "2.0.42" }
mat-clockwork-utils = { path = "../utils", version = "2.0.42" }
mat-clockwork-webhook-program = { path = "../programs/webhook", features = ["no-entrypoint"], version = "2.0.42" }
solana-client = "=1.14.16"
solana-sdk = "=1.14.16"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"
