[package]
name = "clockwork-cron"
version = "1.4.4"
description = "A cron expression parser that's safe to use in the Solana runtime"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_cron"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
nom = "~7"
once_cell = "1.5.2"

