[package]
name = "clockwork-cron"
repository = "https://github.com/clockwork-xyz/cron"
description = "A cron expression parser that's safe to use in the Solana runtime"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
name = "clockwork_cron"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
nom = "~7"
once_cell = "1.5.2"

