[package]
name = "clockwork-macros"
repository = "https://github.com/clockwork-xyz/macros"
description = "Macros for Clockwork"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
name = "clockwork_macros"
proc-macro = true

[dependencies]
anchor-syn = "0.26.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["full"] }
