[package]
name = "clockwork-macros"
version = "2.0.2"
description = "Macros for Clockwork"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_macros"
proc-macro = true

[dependencies]
anchor-syn = "0.26.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["full"] }
