[package]
name = "cronos-metrics"
version = "0.2.0-alpha2"
description = "Performance monitoring for Cronos clusters"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cli"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana"]

[dependencies]
chrono = "0.4.19"
cronos-sdk = { path = "../sdk", features = ["client"], version = "0.2.0-alpha2" }
dotenv = "0.15.0"
elasticsearch = "7.14.0-alpha.1"
serde_json = "~1"
tokio = { version = "~1.14.1", features = ["full"] }
