[package]
name = "clockwork-metrics"
version = "1.0.2"
description = "Performance monitoring for Clockwork clusters"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/cli"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[dependencies]
chrono = "0.4.19"
clockwork-client = { path = "../client", version = "1.0.2" }
dotenv = "0.15.0"
elasticsearch = "7.14.0-alpha.1"
serde_json = "~1"
solana-sdk = "1.10.34"
tokio = { version = "~1.14.1", features = ["full"] }
