[package]
name = "clockwork_plugin"
version = "1.4.4"
edition = "2021"
description = "Clockwork plugin for Solana validators"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/bot"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.26.0"
async_once = "0.2.6"
async-trait = "0.1.64"
bincode = "1.3.3"
bs58 = "0.4.0"
bugsnag = "0.2.1"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-client = { path = "../client", version = "1.4.4" }
clockwork-cron = { path = "../cron", version = "1.4.4" }
clockwork-utils = { path = "../utils", version = "1.4.4" }
lazy_static = "1.4.0"
log = "0.4"
prost = "0.10.0"
reqwest = "0.11.11"
sentry = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2.3"
solana-account-decoder = "~1.14.12"
solana-client = "~1.14.12"
solana-geyser-plugin-interface = "~1.14.12"
solana-logger = "~1.14.12"
solana-program = "~1.14.12"
solana-sdk = "~1.14.12"
solana-transaction-status = "~1.14.12"
thiserror = "1.0.30"
tokio = "~1.14.1"
futures = "0.3.26"

[build-dependencies]
cargo_toml = "0.13.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
