[package]
name = "clockwork-relayer"
repository = "https://github.com/clockwork-xyz/relayer"
description = "Clockwork relayer for webhook requests"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anchor-lang = { workspace = true }
byte-unit = "4.0.18"
clockwork-webhook-program = { workspace = true }
clockwork-relayer-api = { workspace = true }
curve25519-dalek = "3.2.1"
lazy_static = "1.4.0"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.94"
solana-client = { workspace = true }
solana-zk-token-sdk = { workspace = true }
solana-sdk = { workspace = true }
tokio = "1.26.0"
bincode = "1.3.3"
rayon = "1.7.0"
regex = "1.7.1"
