[package]
name = "clockwork-relayer"
version = "2.0.18"
edition = "2021"
description = "Clockwork relayer for webhook requests"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/relayer"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anchor-lang = "0.29.0"
byte-unit = "4.0.18"
clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.18" }
clockwork-relayer-api = { path = "api", version = "=2.0.18" }
curve25519-dalek = "3.2.1"
lazy_static = "1.4.0"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.94"
solana-client = "^1.16"
solana-zk-token-sdk = "^1.16"
solana-sdk = "^1.16"
tokio = "1.26.0"
bincode = "1.3.3"
rayon = "1.7.0"
regex = "1.7.1"
