[package]
name = "clockwork-sdk"
repository = "https://github.com/clockwork-xyz/sdk"
description = "An SDK for building automated programs on Solana"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
name = "clockwork_sdk"

[dependencies]
anchor-lang = { workspace = true }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-thread-program = { workspace = true, features = ["cpi"] }
nom = "~7"
once_cell = "1.5.2"

[features]
default = []
