[package]
name = "mat-clockwork-sdk"
version = "2.0.42"
description = "An SDK for building automated programs on Solana"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://mat-clockwork.xyz"
repository = "https://github.com/mat-clockwork-xyz/mat-clockwork"
documentation = "https://docs.mat-clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_sdk"

[dependencies]
anchor-lang = "0.27.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
mat-clockwork-thread-program = { path = "../programs/thread", features = ["cpi"], version = "2.0.42" }
nom = "~7"
once_cell = "1.5.2"

[features]
default = []
