[package]
name = "clockwork-sdk"
version = "2.0.19"
description = "An SDK for building automated programs on Solana"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_sdk"

[dependencies]
anchor-lang = "0.29.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-thread-program = { path = "../programs/thread", features = ["cpi"], version = "=2.0.19" }
nom = "~7"
once_cell = "1.5.2"

[features]
default = []
