[package]
name = "clockwork-stress"
version = "1.0.1"
description = "A stress testing tool for Clockwork"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clap = { version = "3.1.2", features = ["derive"] }
clockwork-client = { path = "../client", version = "1.0.1" }
clockwork-cron = { path = "../cron", version = "1.0.1" }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
solana-clap-utils = "1.10.34"
solana-client = "1.10.34"
solana-cli-config = "1.10.34"
solana-sdk = "1.10.34"
thiserror = "1.0.30"
version = "3.0.0"

[[bin]]
name = "clockwork_stress"
path = "src/main.rs"
