[package]
name = "cronos-telemetry"
version = "0.1.8"
description = "Monitoring service for Cronos bot clusters"
edition = "2021"
license = "GNU AGPLv3"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cli"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana", "cronos", "cli"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.19"
cronos-sdk = { path = "../sdk", features = ["client"], version = "0.1.8" }
dotenv = "0.15.0"
elasticsearch = "7.14.0-alpha.1"
serde_json = "~1"
solana-account-decoder = "1.10.8"
solana-client = "1.10.8"
solana-program = "1.10.8"
solana-sdk = "1.10.8"
tokio = { version = "1.17.0", features = ["full"] }
