[package]
name = "clockwork-utils"
repository = "https://github.com/clockwork-xyz/utils"
description = "Helpers to build with Clockwork"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
name = "clockwork_utils"

[dependencies]
anchor-lang = { workspace = true }
base64 = "~0.13"
static-pubkey = "1.0.3"

