[package]
name = "clockwork-utils"
version = "2.0.19"
description = "Tools for building blocks on Solana"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_utils"

[dependencies]
anchor-lang = "0.28.0"
base64 = "~0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static-pubkey = "1.0.3"

