[package]
name = "clockwork-automation-program"
version = "1.4.2"
description = "Clockwork automation program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_automation_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-cron = { path = "../../cron", version = "1.4.0" }
clockwork-macros = { path = "../../macros", version = "1.4.0" }
clockwork-network-program = { path = "../network", features = ["cpi"], version = "1.4.0" }
clockwork-utils = { path = "../../utils", version = "1.4.0" }
static-pubkey = "1.0.3"
version = "3.0.0"
